# MarketLens

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md
src/marketlens/: config.py
tests/: conftest.py  test_config.py  test_placeholder.py
